<resources>
    <string name="app_name">Tech Tag</string>

    <string name="auth_failed">Authentication Failed</string>
    <string name="blank_input">One or more inputs is blank</string>
    <string name="create_failed">Account Creation Failed</string>
    <string name="status_label">Status:</string>
    <string name="status_output">Status Output</string>
    <string name="email_password_login">Email and Password Login</string>
    <string name="email_input">Email Address</string>
    <string name="password_input">Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="create_account_button">Create Account</string>
    <string name="create_label">Create a Group</string>
    <string name="join_label">Join a Group</string>
    <string name="join_input">Group Name</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_map_locations">Map</string>
    <string name="tech_tag_logo">Tech Tag Logo</string>

    <string name="title_activity_map_location_testing">MapLocationTesting</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="join_code">Join Code</string>
    <string name="start_game_button">Start Game</string>
    <string name="email_view_init">Email Goes Here</string>

    <string name="action_info">Info</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="inst_display">Instructions</string>
    <string name="number_1">1.</string>
    <string name="number_2">2.</string>
    <string name="number_3">3.</string>
    <string name="number_4">4.</string>
    <string name="instructions_step_1">
        Log in with your email and password. Each email can only be used once.
    </string>
    <string name="instructions_step_2">
        Select is you want to create a group or join a group. Add a name of a group that you want to create or join.
    </string>
    <string name="instructions_step_3">
        The list of people currently in the group will be displayed in the list. Press continue to activate the game.
    </string>
    <string name="instructions_step_4">
        The other people in your group will show up as point on the map. To tag another person, press the volume up button then the volume down button in that order in under 3/4 of a second.
    </string>
    <string name="create_join_name_instructions">Choose a New or Existing Group Name</string>
    <string name="option_not_selected">Create / Join Option not Selected</string>
    <string name="code_not_in_use">Code is not in use</string>
    <string name="code_in_use">Code is Already in Use</string>
    <string name="code_field_empty">Group Name Field is Empty</string>

</resources>
