<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBlue">

    <TextView
        android:id="@+id/instDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/inst_display"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <View
        android:id="@+id/lineDivide"
        android:layout_width="235dp"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_inverse"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instDisplay" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineDivide">

        <TextView
            android:id="@+id/number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inst1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/instructions_step_1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_toRightOf="@+id/number1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inst1"/>

        <TextView
            android:id="@+id/inst2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/instructions_step_2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_toRightOf="@+id/number2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/number2"/>

        <TextView
            android:id="@+id/number3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inst2"/>

        <TextView
            android:id="@+id/inst3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/instructions_step_3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_toRightOf="@+id/number3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/number3"/>

        <TextView
            android:id="@+id/number4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_4"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inst3"/>

        <TextView
            android:id="@+id/inst4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/instructions_step_4"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintLeft_toRightOf="@+id/number4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/number4"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>