<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kash.techtag.MainActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:background="@color/loginBlue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_label"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.23" />

        <TextView
            android:id="@+id/statusOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/status_output"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="271dp" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:background="@color/loginBlue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="6dp"
        android:id="@+id/constraintLayout">

        <TextView
            android:id="@+id/emailPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/email_password_login"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_input"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textColorHint="@color/hintColor"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="start"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailPasswordLabel" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_input"
            android:textColorHint="@color/hintColor"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:gravity="start"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button"
            android:textColor="@color/white"
            android:background="@drawable/orange_button"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account_button"
            android:textColor="@color/white"
            android:background="@drawable/orange_button"
            android:elevation="0dp"
            android:onClick="onClick"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signInButton" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/tech_tag_logo"
        app:srcCompat="@drawable/tech_tag_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintVertical_bias="0.504" />

</android.support.constraint.ConstraintLayout>
